# ripcanvas

./: .gitignore  BUGFIX.md  Cargo.toml  DESIGN.md  LICENSE  PROGRESS.md  README.md  REFACTOR.md  build.rs
.github/workflows/: ci.yml
scripts/: package-macos.sh  package-windows.ps1
src/: app.rs  cli.rs  lib.rs  main.rs
src/canvas/: edit.rs  export.rs  markdown.rs  mod.rs  model.rs  parser.rs  view_model.rs
src/watch/: mod.rs
tests/: canvas_parser.rs  cli.rs
tests/fixtures/: basic.canvas  invalid-json.canvas  negative-coordinates.canvas
ui/: app-window.slint
