[package]
name = "ripcanvas"
version = "0.1.13"
edition = "2024"
description = "A fast Rust viewer for Obsidian Canvas"
license = "MIT"
readme = "README.md"
repository = "https://github.com/LongCoderX/ripcanvas"
homepage = "https://github.com/LongCoderX/ripcanvas"
keywords = ["obsidian", "canvas", "viewer", "slint"]
categories = ["command-line-utilities", "visualization"]
exclude = ["/dist", "/target"]
build = "build.rs"

[[bin]]
name = "rocv"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = "1"
arboard = "3"
notify = "6"
rfd = "0.14"
fontdb = "0.23"
image = "0.25"
ab_glyph = "0.2"
font8x8 = "0.3"

[build-dependencies]
slint-build = "1"
winresource = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[package.metadata.packager]
product-name = "RipCanvas"
identifier = "com.ripcanvas.viewer"
before-packaging-command = "cargo build --release --bin rocv"
formats = ["nsis"]
out-dir = "dist/packager"
binaries-dir = "target/release"
resources = []
icons = ["assets/icon.ico"]

[[package.metadata.packager.binaries]]
path = "rocv.exe"
main = true

[package.metadata.packager.windows]
digest-algorithm = "sha256"

[package.metadata.packager.nsis]
installMode = "currentUser"
